--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="header__top-wrapper">
                 <div class="header__top">
-                    <a class="logo" href="index.html"><img src="images/logo.png" alt="Ремонт телефонов доктор гаджет"></a>
+                    <a class="logo" href="index.html"><img src="images/logo-2.svg" alt="Ремонт телефонов доктор гаджет" width="200px" height="50px"></a>
                     <nav class="menu">
                         <ul class="menu__list">
                             <li class="menu__item">
@@ -66,8 +66,8 @@
         <section class="breaking" id="breaking">
             <div class="container">
                 <h3 class="breaking__title title">Ремонтируем поломки</h3>
-                <div class="breaking__inner">
-                    <div class="breaking__item breaking-item breaking-item--screen">
+                <div class="breaking__inner accordion" data-accordion="open">
+                    <div class="breaking__item breaking-item breaking-item--screen ">
                         <h5 class="breaking-item__title item__title breaking-item__title--screen">Дисплей и стекло</h5>
                         <div class="breaking-item__inner">
                             <div class="breaking-item__columns">
@@ -91,6 +91,7 @@
                             </div>
                         </div>
                     </div>
+
 
                     <div class="breaking__item breaking-item breaking-item--battery">
                         <h5 class="breaking-item__title item__title breaking-item__title--battery">Зарядка и батарея</h5>
@@ -117,7 +118,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="breaking__item breaking-item breaking-item--sound">
                         <h5 class="breaking-item__title item__title breaking-item__title--sound">Звук и динамики</h5>
                         <div class="breaking-item__inner">
@@ -280,50 +280,55 @@
                 </div>
             </div>
         </section>
-        <!-- 
+
         <section class="slider-choice">
             <div class="container">
                 <h3 class="slider-choice__title title">Почему выбирают "Доктор Гаджет"</h3>
-                <div class="slider-choice__inner">
-                    <div class="slider-choice__item ">
-                        <div class="slider-choice__item-inner">
-                            <img class="slider-choice__item-icon" src="images/icons/time.svg" alt="">
-                            <h5 class="slider-choice__item-title item__title">Скорость работы</h5>
-                            <p class="slider-choice__item-text">Время ремонта в нашем сервисном центре занимает от 30 минут</p>
+                <div class="slider-choice__inner swiper">
+                    <div class="swiper-wrapper">
+                        <div class="slider-choice__item swiper-slide">
+                            <div class="slider-choice__item-inner">
+                                <img class="slider-choice__item-icon" src="images/icons/time.svg" alt="">
+                                <h5 class="slider-choice__item-title item__title">Скорость работы</h5>
+                                <p class="slider-choice__item-text">Время ремонта в нашем сервисном центре занимает от 30 минут</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="slider-choice__item ">
-                        <div class="slider-choice__item-inner">
-                            <img class="slider-choice__item-icon" src="images/icons/dollar.svg" alt="">
-                            <h5 class="slider-choice__item-title item__title">Стоимость работы</h5>
-                            <p class="slider-choice__item-text">Стоимоть работ нижу конкурентов, экономим средства клиентов</p>
+                        <div class="slider-choice__item swiper-slide">
+                            <div class="slider-choice__item-inner">
+                                <img class="slider-choice__item-icon" src="images/icons/dollar.svg" alt="">
+                                <h5 class="slider-choice__item-title item__title">Стоимость работы</h5>
+                                <p class="slider-choice__item-text">Стоимоть работ нижу конкурентов, экономим средства клиентов</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="slider-choice__item ">
-                        <div class="slider-choice__item-inner">
-                            <img class="slider-choice__item-icon" src="images/icons/setings.svg" alt="">
-                            <h5 class="slider-choice__item-title item__title">Оригинальные запчасти</h5>
-                            <p class="slider-choice__item-text">Для ремонта используем оригинальные запчасти, либо аналоги</p>
+                        <div class="slider-choice__item swiper-slide">
+                            <div class="slider-choice__item-inner">
+                                <img class="slider-choice__item-icon" src="images/icons/setings.svg" alt="">
+                                <h5 class="slider-choice__item-title item__title">Оригинальные запчасти</h5>
+                                <p class="slider-choice__item-text">Для ремонта используем оригинальные запчасти, либо аналоги</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="slider-choice__item ">
-                        <div class="slider-choice__item-inner">
-                            <img class="slider-choice__item-icon" src="images/icons/work-time.svg" alt="">
-                            <h5 class="slider-choice__item-title item__title">Режим работы</h5>
-                            <p class="slider-choice__item-text">Пн-Сб: с 10 до 19 Вс: Выходной</p>
+                        <div class="slider-choice__item swiper-slide">
+                            <div class="slider-choice__item-inner">
+                                <img class="slider-choice__item-icon" src="images/icons/work-time.svg" alt="">
+                                <h5 class="slider-choice__item-title item__title">Режим работы</h5>
+                                <p class="slider-choice__item-text">Пн-Сб: с 10 до 19 Вс: Выходной</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="slider-choice__item ">
-                        <div class="slider-choice__item-inner">
-                            <img class="slider-choice__item-icon" src="images/icons/master.svg" alt="">
-                            <h5 class="slider-choice__item-title item__title">Опытные мастера</h5>
-                            <p class="slider-choice__item-text">Квалифицированные инженеры с опытом работы от 5 лет</p>
+                        <div class="slider-choice__item swiper-slide">
+                            <div class="slider-choice__item-inner">
+                                <img class="slider-choice__item-icon" src="images/icons/master.svg" alt="">
+                                <h5 class="slider-choice__item-title item__title">Опытные мастера</h5>
+                                <p class="slider-choice__item-text">Квалифицированные инженеры с опытом работы от 5 лет</p>
+                            </div>
                         </div>
+
                     </div>
+                    <div class="swiper-pagination"></div>
                 </div>
             </div>
         </section>
-       
+
+        <!--
         <section class="brands">
             <div class="container">
                 <h3 class="brands__title title">Ремонтируем бренды</h3>
